# celery-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  HACKING_QUICKSTART.md  Makefile  README.md  REDBEAT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
celery-codegen/: Cargo.toml
celery-codegen/src/: task.rs
examples/: celery_app.py  celery_app.rs  celery_redbeat.rs  celery_worker.rs  redbeat_app.rs  redbeat_distributed_lock.rs  redis_beat.rs  redis_results.rs
src/: codegen.rs  error.rs  lib.rs  prelude.rs  routing.rs
src/app/: mod.rs  trace.rs
src/backend/: mod.rs  redis.rs
src/beat/: backend.rs  distributed.rs  mod.rs  redbeat.rs  scheduled_task.rs  scheduler.rs  tests.rs
src/beat/backend/: redbeat_config.rs  redis.rs
src/beat/schedule/: descriptor.rs  mod.rs
src/beat/schedule/cron/: mod.rs  time_units.rs
src/broker/: amqp.rs  mod.rs  redis.rs
src/protocol/: mod.rs
src/task/: async_result.rs  mod.rs
tests/: send_sync_test.rs
tests/app_codegen/: mod.rs
tests/beat_codegen/: mod.rs
tests/task_codegen/: mod.rs
