[workspace]
members = ["./", "celery-codegen"]

[package]
name = "celery-rs"
version = "0.6.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["celery", "amqp", "rabbitmq", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GaiaNet-AI/celery-rs"
homepage = "https://github.com/GaiaNet-AI/celery-rs"
description = "Community-maintained Rust implementation of Celery (fork of rusty-celery)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "celery"
path = "src/lib.rs"

[[example]]
name = "celery_app"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"]}
tokio-stream = "0.1.17"
serde = { version = "1.0.221", features = ["derive"]}
serde_json = "1.0.143"
rmp-serde = { version = "1.3.0", optional = true }
rmpv = { version = "1.3.0", optional = true, features = ["with-serde"] }
serde_yaml = { version = "0.9.34", optional = true }
serde-pickle = { version = "1.2.0", optional = true }
thiserror = "2.0.16"
async-trait = "0.1.89"
lapin = { version = "3.6.0", default-features = false }
log = "0.4.28"
futures = { version = "0.3.31", features = ["async-await"] }
uuid = { version = "1.18.1", features = ["v4"]}
rand = "0.8"
celery-rs-codegen = { version = "0.6.0", path = "./celery-codegen", optional = true }
colored = "3.0.0"
once_cell = { version = "1.21.3" }
globset = "0.4.16"
hostname = "0.4.1"
redis = { version = "0.32.5", features=["connection-manager", "tokio-comp"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
tokio-executor-trait = "3.1.0"
tokio-reactor-trait = "2.8.0"
futures-lite = "2.6.1"

[dev-dependencies]
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde_yaml = "0.9.34"
serde-pickle = "1.2.0"
env_logger = "0.11.8"
anyhow = "1.0.99"
structopt = "0.3.26"

[features]
default = ["codegen", "rustls"]
codegen = ["celery-rs-codegen"]
extra_content_types = ["rmp-serde", "rmpv", "serde_yaml", "serde-pickle"]
native-tls = ["lapin/native-tls"]
rustls = ["lapin/rustls"]
