[package]
name = "celery-rs-codegen"
version = "0.6.2"
authors = ["epwalsh <epwalsh10@gmail.com>", "dragon <longzhi@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/GaiaNet-AI/celery-rs"
homepage = "https://github.com/GaiaNet-AI/celery-rs"
description = "Procedural macros for celery-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit-mut"]}
